fix(css): fixed style for list since mark of listitem is visible in iOS

--- a/components/molecules/navigation/category/index.scss
+++ b/components/molecules/navigation/category/index.scss
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0 0 0 0.5rem;
     width: 100%;
+    list-style-type: none;
 
     @include respond-to(tablet) {
       padding-left: 1rem;
