--- a/components/organisms/articles-list/index.scss
+++ b/components/organisms/articles-list/index.scss
@@ -1,6 +1,7 @@
 .#{$prefix}-articles-list {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 
   &__item {
     &:not(:first-child) {
